--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-﻿<html>
-	<script src="correct-misstakes/app.js">
-</html>
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-	
+    <meta charset="UTF-8">
+    <title>Document</title>
 </head>
 <body>
-	<h1>Lorem ipsum</h1>
+    <h1>Lorem ipsum</h1>
+    <script src="app.js"></script>
 </body>
+</html>
